# vns-thesis

./: .gitignore  LICENSE  README.md  cli.py  generate_data.py  generate_mokp_data.py  pyproject copy.toml  pyproject.toml  reproducing results.md  svns_vs_bvns_vs_pymoo_all.xlsx
data/moacbw/: README.md  bcspwr01.json  bcspwr02.json  bcspwr03.json  bcspwr04.json  bcspwr05.json  bcspwr06.json  bcspwr07.json  bcspwr08.json  bcspwr09.json  bcspwr10.json  read_matrix_market_format.py
data/mokp/: 2KP100-1A.json  2KP100-1B.json  2KP100-1C.json  2KP100-1D.json  2KP100-50.json  2KP150-1A.json  2KP150-1B.json  2KP150-1C.json  2KP150-1D.json  2KP200-1A.json  2KP200-1C.json  2KP200-1D.json  2KP250-1A.json  2KP250-1B.json  2KP250-1C.json  2KP250-1D.json  2KP3-test-2d.json  2KP3-test.json  2KP300-1A.json  2KP300-1B.json  2KP300-1C.json  2KP300-1D.json  2KP350-1A.json  2KP350-1B.json  2KP350-1C.json  2KP350-1D.json  2KP400-1A.json  2KP400-1B.json  2KP400-1C.json  2KP400-1D.json  2KP450-1A.json  2KP450-1B.json  2KP450-1C.json  2KP450-1D.json  2KP50-11.json  2KP50-1A.json  2KP50-1B.json  2KP50-1C.json  2KP50-1D.json  2KP50-50.json  (+10 more)
data/moscp/: 2scp101A.json  2scp101B.json  2scp101C.json  2scp101D.json  2scp102A.json  2scp102B.json  2scp102C.json  2scp102D.json  2scp11A.json  2scp11B.json  2scp11C.json  2scp11D.json  2scp201A.json  2scp201B.json  2scp201C.json  2scp201D.json  2scp41A.json  2scp41B.json  2scp41C.json  2scp41D.json  2scp42A.json  2scp42B.json  2scp42C.json  2scp42D.json  2scp43A.json  2scp43B.json  2scp43C.json  2scp43D.json  2scp61A.json  2scp61B.json  2scp61C.json  (+15 more)
(+66 files in other folders)
