[project]
name = "vns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "ipykernel>=6.30.1",
    "isort>=6.0.1",
    "lark>=1.2.2",
    "matplotlib>=3.10.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pymoo>=0.6.1.5",
    "pyqt6>=6.9.1",
    "scikit-posthocs>=0.11.4",
    "scipy>=1.16.1",
    "tabulate>=0.9.0",
    "xlsxwriter>=3.2.9",
    "xxhash>=3.5.0",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "pytest>=8.4.1",
    "ruff>=0.12.5",
    "viztracer>=1.0.4",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
